--- a/Resources/Layout/Viewer.axml
+++ b/Resources/Layout/Viewer.axml
@@ -8,16 +8,24 @@
       android:layout_height="match_parent"
       android:layout_gravity="center"
       android:src="@drawable/folder" />
-  <LinearLayout
+  <RelativeLayout
+      android:id="@+id/ButtonsLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_gravity="bottom"
       android:gravity="bottom"
       android:orientation="vertical">
+    <ZoomControls
+        android:id="@+id/ZoomButtons"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
+        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true">
       <ImageButton
         android:clickable="true"
           android:id="@+id/LeftButton"
@@ -46,11 +54,5 @@
           android:layout_weight="1"
           android:src="@drawable/arrow_right" />
     </LinearLayout>
-  </LinearLayout>
-  <ZoomControls
-      android:id="@+id/ZoomButtons"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_gravity="center_horizontal"
-      android:layout_weight="0" />
+  </RelativeLayout>
 </FrameLayout>
