--- a/Resources/Layout/Viewer.axml
+++ b/Resources/Layout/Viewer.axml
@@ -2,57 +2,56 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-  <comicsviewer.views.TouchImageView
-      android:id="@+id/MainImage"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_gravity="center"
-      android:src="@drawable/folder" />
-  <RelativeLayout
-      android:id="@+id/ButtonsLayout"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_gravity="bottom"
-      android:gravity="bottom"
-      android:orientation="vertical">
-    <ZoomControls
-        android:id="@+id/ZoomButtons"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-    <LinearLayout
+    <comicsviewer.views.TouchImageView
+        android:id="@+id/MainImage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center" />
+    <RelativeLayout
+        android:id="@+id/ButtonsLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="bottom"
-        android:layout_alignParentBottom="true">
-      <ImageButton
-        android:clickable="true"
-          android:id="@+id/LeftButton"
-            android:background="@android:color/transparent"
-            android:layout_width="fill_parent"
+        android:gravity="bottom"
+        android:orientation="vertical">
+        <ZoomControls
+            android:id="@+id/ZoomButtons"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:src="@drawable/arrow_left" />
-      <ImageButton
-        android:clickable="true"
-          android:id="@+id/OpenButton"
-          android:background="@android:color/transparent"
-          android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center_vertical"
-          android:layout_weight="1"
-          android:src="@drawable/folder" />
-      <ImageButton
-        android:clickable="true"
-          android:id="@+id/RightButton"
-          android:background="@android:color/transparent"
-          android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center_vertical"
-          android:layout_weight="1"
-          android:src="@drawable/arrow_right" />
-    </LinearLayout>
-  </RelativeLayout>
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_alignParentBottom="true">
+            <ImageButton
+                android:clickable="true"
+                android:id="@+id/LeftButton"
+                android:background="@android:color/transparent"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:src="@drawable/arrow_left_shadow" />
+            <ImageButton
+                android:clickable="true"
+                android:id="@+id/OpenButton"
+                android:background="@android:color/transparent"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:src="@drawable/open" />
+            <ImageButton
+                android:clickable="true"
+                android:id="@+id/RightButton"
+                android:background="@android:color/transparent"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:src="@drawable/arrow_right_shadow" />
+        </LinearLayout>
+    </RelativeLayout>
 </FrameLayout>
