--- a/Resources/Layout-land/Viewer.axml
+++ b/Resources/Layout-land/Viewer.axml
@@ -2,8 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <comicsviewer.views.TouchImageView
-        android:id="@+id/MainImage"
+  <comicsviewer.views.ZoomImageView
+      android:id="@+id/MainImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center" />
