--- a/Resources/Layout/Viewer.axml
+++ b/Resources/Layout/Viewer.axml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <comicsviewer.views.TouchImageView
+    <comicsviewer.views.ZoomImageView
         android:id="@+id/MainImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
